...
      }
    },
    "东汉至今 · 东亚与东南亚" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "亮色" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "亲见 · 所愿 · 私人记录" : {
      "localizations" : {
        "en" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
...
      }
    },
    "关于访古" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "关闭" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "关闭提示" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "列表" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "取消" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "图鉴" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "大图" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "完成" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "导入备份" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "年表" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "我的" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "我的访古记" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "我的评价" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "我的足迹" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "搜索古迹、地点或时代" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "搜索地点、省份或古迹" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "改为未标记" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "日本" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "没有匹配的到访地点" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "深色" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "清除评价" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "筛选" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "编辑到访记录" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "补记到访" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "足迹" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "跟随系统" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "返回" : {
      "localizations" : {
        "en" : {
...
